<resources>
    <string name="app_name">WhereTo?</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="please_sign_in">Please Sign In</string>
    <string name="password">Password</string>
    <string name="title_activity_user_info">UserInfo</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_user_home">UserHome</string>
    <string name="title_activity_create_meeting">CreateMeeting</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="title_activity_plan_meeting">Plan Meeting</string>
    <string name="enter_a_meeting_name">Enter a meeting name</string>
    <string name="enter_a_meeting_description">Enter a meeting description</string>
    <string name="logout">LOGOUT</string>
    <string name="create_meeting">Create Meeting</string>
    <string name="enter_a_meeting_date">Enter a meeting date</string>
    <string name="date_hint">Enter date: YYYY-MM-DD</string>
    <string name="description">Enter description</string>
    <string name="enter_a_date">Enter date</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_a_time">Enter time</string>
    <string name="format_hh_mm_ss">Enter time: HH:MM:SS</string>
    <string name="enter_a_duration">Enter a duration in minutes</string>
</resources>
